fixed bronze regex logic

--- a/databricks/bronze/ds2b.ipynb
+++ b/databricks/bronze/ds2b.ipynb
@@ -1,6 +1,166 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "fa8e838d-998b-49e5-ac23-acf70a9b6956",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "---\n",
+    "\n",
+    "## Bronze Layer – Companies House ETL Pipeline\n",
+    "\n",
+    "### Objective\n",
+    "\n",
+    "The purpose of the Bronze layer in this pipeline is to **ingest raw Companies House API data and store it in a structured, queryable Delta format** while preserving the original source fidelity. This layer focuses on **data capture, traceability, and scalability**, not business transformations.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Data Source\n",
+    "\n",
+    "* Source System: **UK Companies House API**\n",
+    "* Data Type: **JSON (multiline, nested)**\n",
+    "* Datasets Ingested:\n",
+    "\n",
+    "  * Company Overview\n",
+    "  * Officers\n",
+    "  * Filing History\n",
+    "\n",
+    "Each company’s data arrives as nested JSON files organised in a folder hierarchy based on **year / month / day / company_number**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Key Design Decisions\n",
+    "\n",
+    "#### 1. Raw to Delta Conversion\n",
+    "\n",
+    "Raw JSON files stored in Databricks Volumes are converted into **Delta Tables**.\n",
+    "Delta format provides:\n",
+    "\n",
+    "* ACID transactions\n",
+    "* Schema enforcement\n",
+    "* Time travel\n",
+    "* Performance optimisation\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### 2. Explicit Schema Definition\n",
+    "\n",
+    "Instead of relying on schema inference, **StructType schemas** were defined manually for each dataset.\n",
+    "This prevents:\n",
+    "\n",
+    "* `_corrupt_record` issues\n",
+    "* Schema drift\n",
+    "* Unexpected data type mismatches\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### 3. Multiline JSON Handling\n",
+    "\n",
+    "The Companies House API returns nested, multiline JSON.\n",
+    "Spark was configured using:\n",
+    "\n",
+    "```\n",
+    ".option(\"multiline\", \"true\")\n",
+    "```\n",
+    "\n",
+    "to correctly parse large JSON objects.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### 4. Metadata Extraction from File Path\n",
+    "\n",
+    "Unity Catalog does not support `input_file_name()`, so `_metadata.file_path` was used to extract:\n",
+    "\n",
+    "* `company_number`\n",
+    "\n",
+    "This ensures every record is **uniquely identifiable and traceable to its source file**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### 5. Flattening Nested Structures\n",
+    "\n",
+    "Some datasets contained arrays (e.g., officers, filing items).\n",
+    "These were flattened using:\n",
+    "\n",
+    "```\n",
+    "explode()\n",
+    "```\n",
+    "\n",
+    "This makes the tables query-friendly while still remaining close to the source structure.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### 6. Audit Column\n",
+    "\n",
+    "A technical audit column was added:\n",
+    "\n",
+    "* `last_updated_ts` → captures table write time\n",
+    "\n",
+    "This enables:\n",
+    "\n",
+    "* Refresh tracking\n",
+    "* Incremental logic in future layers\n",
+    "* Operational monitoring\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Metadata-Driven Architecture\n",
+    "\n",
+    "To improve scalability and avoid hardcoding:\n",
+    "\n",
+    "* A **config.json** file stores catalog, schema, base path, and dataset metadata.\n",
+    "* The notebook dynamically reads configuration using **Databricks Widgets**.\n",
+    "* This allows easy environment switching (Dev / Test / Prod) without code changes.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Output Tables (Unity Catalog)\n",
+    "\n",
+    "Catalog: `companies-data`\n",
+    "Schema: `bronze`\n",
+    "\n",
+    "Tables Created:\n",
+    "\n",
+    "* `overview`\n",
+    "* `officers`\n",
+    "* `filing_history`\n",
+    "\n",
+    "Each table:\n",
+    "\n",
+    "* Is stored in Delta format\n",
+    "* Uses `company_number` as the primary identifier\n",
+    "* Includes `last_updated_ts`\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### What the Bronze Layer Does NOT Do\n",
+    "\n",
+    "To maintain proper medallion architecture separation, the Bronze layer intentionally avoids:\n",
+    "\n",
+    "* Business transformations\n",
+    "* Deduplication\n",
+    "* Joins\n",
+    "* Aggregations\n",
+    "* Data cleansing\n",
+    "\n",
+    "These responsibilities are deferred to the **Silver layer**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Result\n",
+    "\n",
+    "The Bronze layer provides a **reliable, scalable, and audit-ready raw data foundation** that preserves source integrity while enabling downstream analytical processing.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -120,7 +280,7 @@
     "        .json(f\"{BASE_PATH}/*/*/*/*/{file_name}\") \\\n",
     "        .withColumn(\"file_path\", col(\"_metadata.file_path\")) \\\n",
     "        .withColumn(\"company_number\",\n",
-    "            regexp_extract(\"file_path\", r'/([0-9A-Z]+)/', 1)\n",
+    "            regexp_extract(\"file_path\", r'/([0-9A-Z]+)/[^/]+$', 1)\n",
     "        )\n",
     "\n",
     "    if explode_flag:\n",
@@ -137,28 +297,6 @@
     "        .saveAsTable(f\"`{CATALOG}`.{SCHEMA}.{table_name}\")\n",
     "\n",
     "print(\"Metadata-Driven Bronze Pipeline Completed\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "0cae3071-a44d-48f2-802f-9a0b0c6ace8b",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "config_raw = spark.read.text(config_path).collect()[0][0]\n",
-    "print(config_raw)\n"
    ]
   },
   {
