updated new yfinance data and implemented production grade code

--- a/medallion/gold/s2g.ipynb
+++ b/medallion/gold/s2g.ipynb
@@ -22,19 +22,32 @@
     "# WIDGETS\n",
     "# =====================================\n",
     "dbutils.widgets.text(\n",
-    "    \"config_path\",\n",
-    "    \"/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/databricks/gold/config.json\",\n",
-    "    \"Config File Path\"\n",
+    "    name=\"config_path\",\n",
+    "    defaultValue=\"/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/medallion/gold/config.json\",\n",
+    "    label=\"Config File Path\"\n",
     ")\n",
     "\n",
-    "config_path = dbutils.widgets.get(\"config_path\")\n",
+    "# =====================================\n",
+    "# IMPORTS\n",
+    "# =====================================\n",
+    "import json\n",
+    "from utils.logger import get_logger\n",
+    "from utils.sparksession import create_spark_session\n",
+    "\n",
+    "# =====================================\n",
+    "# INITIALISE LOGGER & SPARK\n",
+    "# =====================================\n",
+    "logger = get_logger(\"ds2g_silver_to_gold\")\n",
+    "spark = create_spark_session(\"DS2G | Silver to Gold Promotion\")\n",
+    "\n",
+    "logger.info(\"Spark session initialised\")\n",
     "\n",
     "# =====================================\n",
     "# LOAD CONFIG\n",
     "# =====================================\n",
-    "import json\n",
-    "\n",
     "config_path = dbutils.widgets.get(\"config_path\")\n",
+    "logger.info(f\"Loading config from: {config_path}\")\n",
+    "\n",
     "with open(config_path, \"r\") as f:\n",
     "    config = json.load(f)\n",
     "\n",
@@ -43,23 +56,50 @@
     "GOLD_SCHEMA = config[\"gold_schema\"]\n",
     "TABLES = config[\"tables\"]\n",
     "\n",
+    "logger.info(\n",
+    "    f\"Config loaded | Catalog={CATALOG}, Silver={SILVER_SCHEMA}, Gold={GOLD_SCHEMA}\"\n",
+    ")\n",
+    "logger.info(f\"Tables to promote: {TABLES}\")\n",
     "\n",
     "# =====================================\n",
-    "# SILVER → GOLD COPY\n",
+    "# SILVER → GOLD PROMOTION\n",
     "# =====================================\n",
     "for table in TABLES:\n",
-    "    print(f\"Promoting table: {table}\")\n",
+    "    logger.info(f\"Promoting table: {table}\")\n",
     "\n",
     "    silver_df = spark.table(f\"`{CATALOG}`.{SILVER_SCHEMA}.{table}\")\n",
     "\n",
-    "    silver_df.write \\\n",
-    "        .format(\"delta\") \\\n",
-    "        .mode(\"overwrite\") \\\n",
-    "        .option(\"overwriteSchema\", \"true\") \\\n",
-    "        .saveAsTable(f\"`{CATALOG}`.{GOLD_SCHEMA}.{table}\")\n",
+    "    # Drop technical columns not required in Gold\n",
+    "    silver_df = silver_df.drop(\"file_path\", \"last_updated_ts\")\n",
     "\n",
-    "print(\"Silver → Gold promotion completed successfully\")\n"
+    "    (\n",
+    "        silver_df.write\n",
+    "        .format(\"delta\")\n",
+    "        .mode(\"overwrite\")\n",
+    "        .option(\"overwriteSchema\", \"true\")\n",
+    "        .saveAsTable(f\"`{CATALOG}`.{GOLD_SCHEMA}.{table}\")\n",
+    "    )\n",
+    "\n",
+    "    logger.info(f\"Table promoted successfully: {table}\")\n",
+    "\n",
+    "logger.info(\"Silver → Gold promotion completed successfully\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "761e4e07-d6c9-4714-852d-b0ac47ff520c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -78,11 +118,11 @@
    "notebookName": "s2g",
    "widgets": {
     "config_path": {
-     "currentValue": "/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/databricks/gold/config.json",
+     "currentValue": "/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/medallion/gold/config.json",
      "nuid": "3f864655-4554-49c7-8722-2b386416d771",
      "typedWidgetInfo": {
       "autoCreated": false,
-      "defaultValue": "/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/databricks/gold/config.json",
+      "defaultValue": "/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/medallion/gold/config.json",
       "label": "Config File Path",
       "name": "config_path",
       "options": {
@@ -93,12 +133,12 @@
      },
      "widgetInfo": {
       "widgetType": "text",
-      "defaultValue": "/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/databricks/gold/config.json",
+      "defaultValue": "/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/medallion/gold/config.json",
       "label": "Config File Path",
       "name": "config_path",
       "options": {
        "widgetType": "text",
-       "autoCreated": false,
+       "autoCreated": null,
        "validationRegex": null
       }
      }
