--- a/medallion/silver/b2s.ipynb
+++ b/medallion/silver/b2s.ipynb
@@ -10,7 +10,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "5603a890-bc5d-444c-9e18-4ce15f769f5c",
+     "nuid": "aafe966f-5bf9-4b36-b3cd-d8ff09ef34a8",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -23,36 +23,33 @@
     "# ==============================\n",
     "dbutils.widgets.text(\n",
     "    name=\"config_path\",\n",
-    "    defaultValue=\"/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/databricks/silver/config.json\",\n",
+    "    defaultValue=\"/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/medallion/silver/config.json\",\n",
     "    label=\"Config File Path\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "aafe966f-5bf9-4b36-b3cd-d8ff09ef34a8",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
+    ")\n",
+    "\n",
+    "# =========================\n",
+    "# IMPORTS\n",
+    "# =========================\n",
     "import json\n",
     "from pyspark.sql.functions import *\n",
+    "\n",
+    "from utils.logger import get_logger\n",
+    "from utils.sparksession import create_spark_session\n",
+    "\n",
+    "# =========================\n",
+    "# INITIALISE LOGGER & SPARK\n",
+    "# =========================\n",
+    "logger = get_logger(\"ds2s_company_master_silver\")\n",
+    "spark = create_spark_session(\"DS2S | Company Master Silver\")\n",
+    "\n",
+    "logger.info(\"Spark session initialised\")\n",
     "\n",
     "# =========================\n",
     "# LOAD CONFIG\n",
     "# =========================\n",
     "config_path = dbutils.widgets.get(\"config_path\")\n",
+    "logger.info(f\"Loading config from: {config_path}\")\n",
+    "\n",
     "with open(config_path, \"r\") as f:\n",
     "    config = json.load(f)\n",
     "\n",
@@ -60,61 +57,99 @@
     "BRONZE_SCHEMA = config[\"bronze_schema\"]\n",
     "SILVER_SCHEMA = config[\"silver_schema\"]\n",
     "\n",
+    "logger.info(\n",
+    "    f\"Config loaded | Catalog={CATALOG}, Bronze={BRONZE_SCHEMA}, Silver={SILVER_SCHEMA}\"\n",
+    ")\n",
+    "\n",
+    "# =========================\n",
+    "# READ BRONZE TABLES\n",
+    "# =========================\n",
+    "logger.info(\"Reading Bronze tables\")\n",
     "\n",
     "overview_b = spark.table(f\"`{CATALOG}`.{BRONZE_SCHEMA}.overview\")\n",
     "officers_b = spark.table(f\"`{CATALOG}`.{BRONZE_SCHEMA}.officers\")\n",
     "filing_b = spark.table(f\"`{CATALOG}`.{BRONZE_SCHEMA}.filing_history\")\n",
     "\n",
+    "# =========================\n",
+    "# CLEAN & TRANSFORM OVERVIEW\n",
+    "# =========================\n",
+    "logger.info(\"Transforming overview data\")\n",
     "\n",
-    "overview_c = overview_b \\\n",
-    "    .filter(col(\"company_number\").isNotNull()) \\\n",
-    "    .withColumn(\"company_name\", trim(col(\"company_name\"))) \\\n",
-    "    .withColumn(\"date_of_creation\", to_date(\"date_of_creation\")) \\\n",
+    "overview_c = (\n",
+    "    overview_b\n",
+    "    .filter(col(\"company_number\").isNotNull())\n",
+    "    .withColumn(\"company_name\", trim(col(\"company_name\")))\n",
+    "    .withColumn(\"date_of_creation\", to_date(\"date_of_creation\"))\n",
     "    .withColumn(\"company_status\", initcap(col(\"company_status\")))\n",
+    "    .dropDuplicates([\"company_number\"])\n",
+    ")\n",
     "\n",
+    "# =========================\n",
+    "# OFFICER AGGREGATION\n",
+    "# =========================\n",
+    "logger.info(\"Aggregating officers data\")\n",
     "\n",
-    "overview_c = overview_c.dropDuplicates([\"company_number\"])\n",
-    "\n",
-    "\n",
-    "officer_summary = officers_b.groupBy(\"company_number\") \\\n",
+    "officer_summary = (\n",
+    "    officers_b\n",
+    "    .groupBy(\"company_number\")\n",
     "    .agg(\n",
     "        count(\"*\").alias(\"officer_count\"),\n",
     "        countDistinct(\"officer_role\").alias(\"unique_roles\")\n",
     "    )\n",
-    "filing_summary = filing_b \\\n",
-    "    .withColumn(\"date\", to_date(\"date\")) \\\n",
-    "    .groupBy(\"company_number\") \\\n",
+    ")\n",
+    "\n",
+    "# =========================\n",
+    "# FILING AGGREGATION\n",
+    "# =========================\n",
+    "logger.info(\"Aggregating filing history data\")\n",
+    "\n",
+    "filing_summary = (\n",
+    "    filing_b\n",
+    "    .withColumn(\"date\", to_date(\"date\"))\n",
+    "    .groupBy(\"company_number\")\n",
     "    .agg(\n",
     "        max(\"date\").alias(\"last_filing_date\"),\n",
     "        count(\"*\").alias(\"filing_count\")\n",
     "    )\n",
+    ")\n",
     "\n",
+    "# =========================\n",
+    "# BUILD COMPANY MASTER\n",
+    "# =========================\n",
+    "logger.info(\"Joining datasets to build company master\")\n",
     "\n",
-    "company_master = overview_c \\\n",
-    "    .join(officer_summary, \"company_number\", \"left\") \\\n",
+    "company_master = (\n",
+    "    overview_c\n",
+    "    .join(officer_summary, \"company_number\", \"left\")\n",
     "    .join(filing_summary, \"company_number\", \"left\")\n",
-    "\n",
-    "\n",
-    "company_master = company_master \\\n",
     "    .withColumn(\n",
     "        \"company_age\",\n",
     "        year(current_date()) - year(col(\"date_of_creation\"))\n",
-    "    ) \\\n",
+    "    )\n",
     "    .withColumn(\n",
     "        \"is_active\",\n",
     "        when(col(\"company_status\") == \"Active\", lit(True)).otherwise(lit(False))\n",
-    "    ) \\\n",
+    "    )\n",
     "    .withColumn(\"last_updated_ts\", current_timestamp())\n",
+    "    .filter(col(\"company_age\") >= 0)\n",
+    ")\n",
     "\n",
+    "# =========================\n",
+    "# WRITE SILVER TABLE\n",
+    "# =========================\n",
+    "logger.info(\n",
+    "    f\"Writing Silver table: {CATALOG}.{SILVER_SCHEMA}.company_master\"\n",
+    ")\n",
     "\n",
-    "company_master = company_master.filter(col(\"company_age\") >= 0)\n",
+    "(\n",
+    "    company_master.write\n",
+    "    .format(\"delta\")\n",
+    "    .mode(\"overwrite\")\n",
+    "    .partitionBy(\"company_status\")\n",
+    "    .saveAsTable(f\"`{CATALOG}`.{SILVER_SCHEMA}.company_master\")\n",
+    ")\n",
     "\n",
-    "\n",
-    "company_master.write \\\n",
-    "    .format(\"delta\") \\\n",
-    "    .mode(\"overwrite\") \\\n",
-    "    .partitionBy(\"company_status\") \\\n",
-    "    .saveAsTable(f\"`{CATALOG}`.{SILVER_SCHEMA}.company_master\")\n"
+    "logger.info(\"DS2S Company Master Silver Pipeline completed successfully\")"
    ]
   },
   {
@@ -150,11 +185,11 @@
    "notebookName": "b2s",
    "widgets": {
     "config_path": {
-     "currentValue": "/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/databricks/silver/config.json",
+     "currentValue": "/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/medallion/silver/config.json",
      "nuid": "64254902-f480-4546-b6e1-0837702f4feb",
      "typedWidgetInfo": {
       "autoCreated": false,
-      "defaultValue": "/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/databricks/silver/config.json",
+      "defaultValue": "/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/medallion/silver/config.json",
       "label": "Config File Path",
       "name": "config_path",
       "options": {
@@ -165,7 +200,7 @@
      },
      "widgetInfo": {
       "widgetType": "text",
-      "defaultValue": "/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/databricks/silver/config.json",
+      "defaultValue": "/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/medallion/silver/config.json",
       "label": "Config File Path",
       "name": "config_path",
       "options": {
