--- a/medallion/bronze/ds2b_company_house.ipynb
+++ b/medallion/bronze/ds2b_company_house.ipynb
@@ -180,7 +180,7 @@
    "source": [
     "dbutils.widgets.text(\n",
     "    name=\"config_path\",\n",
-    "    defaultValue=\"/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/databricks/bronze/config.json\",\n",
+    "    defaultValue=\"/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/medallion/bronze/config_company_house.json\",\n",
     "    label=\"Config File Path\"\n",
     ")\n"
    ]
@@ -203,64 +203,47 @@
    },
    "outputs": [],
    "source": [
+    "import sys\n",
     "import json\n",
     "from pyspark.sql.types import *\n",
-    "from pyspark.sql.functions import col, regexp_extract, explode, current_timestamp\n",
+    "from pyspark.sql.functions import (\n",
+    "    col,\n",
+    "    regexp_extract,\n",
+    "    explode,\n",
+    "    current_timestamp\n",
+    ")\n",
+    "\n",
+    "# =========================\n",
+    "# IMPORT SHARED UTILITIES\n",
+    "# =========================\n",
+    "from utils.logger import get_logger\n",
+    "from utils.sparksession import create_spark_session\n",
+    "from utils.schema import SCHEMA_MAP\n",
+    "\n",
+    "# =========================\n",
+    "# INITIALISE LOGGER & SPARK\n",
+    "# =========================\n",
+    "logger = get_logger(\"ds2b_company_house_bronze\")\n",
+    "spark = create_spark_session(\"DS2B | Company House Bronze\")\n",
+    "\n",
+    "logger.info(\"Spark session created successfully\")\n",
     "\n",
     "# =========================\n",
     "# LOAD CONFIG\n",
     "# =========================\n",
     "config_path = dbutils.widgets.get(\"config_path\")\n",
+    "logger.info(f\"Loading config from: {config_path}\")\n",
     "\n",
     "with open(config_path, \"r\") as f:\n",
     "    config = json.load(f)\n",
-    "\n",
     "\n",
     "CATALOG = config[\"catalog\"]\n",
     "SCHEMA = config[\"schema\"]\n",
     "BASE_PATH = config[\"base_path\"]\n",
     "\n",
-    "spark.sql(f\"CREATE CATALOG IF NOT EXISTS `{CATALOG}`\")\n",
-    "spark.sql(f\"CREATE SCHEMA IF NOT EXISTS `{CATALOG}`.{SCHEMA}\")\n",
-    "\n",
-    "# =========================\n",
-    "# SCHEMAS MAP\n",
-    "# =========================\n",
-    "overview_schema = StructType([\n",
-    "    StructField(\"company_name\", StringType()),\n",
-    "    StructField(\"company_number\", StringType()),\n",
-    "    StructField(\"company_status\", StringType()),\n",
-    "    StructField(\"date_of_creation\", StringType()),\n",
-    "    StructField(\"jurisdiction\", StringType()),\n",
-    "    StructField(\"type\", StringType()),\n",
-    "    StructField(\"etag\", StringType()),\n",
-    "    StructField(\"has_charges\", BooleanType()),\n",
-    "    StructField(\"has_insolvency_history\", BooleanType())\n",
-    "])\n",
-    "\n",
-    "officers_schema = StructType([\n",
-    "    StructField(\"items\", ArrayType(StructType([\n",
-    "        StructField(\"name\", StringType()),\n",
-    "        StructField(\"officer_role\", StringType()),\n",
-    "        StructField(\"appointed_on\", StringType()),\n",
-    "        StructField(\"nationality\", StringType())\n",
-    "    ])))\n",
-    "])\n",
-    "\n",
-    "filing_schema = StructType([\n",
-    "    StructField(\"items\", ArrayType(StructType([\n",
-    "        StructField(\"date\", StringType()),\n",
-    "        StructField(\"type\", StringType()),\n",
-    "        StructField(\"description\", StringType()),\n",
-    "        StructField(\"category\", StringType())\n",
-    "    ])))\n",
-    "])\n",
-    "\n",
-    "SCHEMA_MAP = {\n",
-    "    \"overview\": overview_schema,\n",
-    "    \"officers\": officers_schema,\n",
-    "    \"filing_history\": filing_schema\n",
-    "}\n",
+    "logger.info(\n",
+    "    f\"Config loaded | Catalog={CATALOG}, Schema={SCHEMA}, BasePath={BASE_PATH}\"\n",
+    ")\n",
     "\n",
     "# =========================\n",
     "# PROCESS TABLES\n",
@@ -272,31 +255,46 @@
     "    explode_flag = table.get(\"explode\", False)\n",
     "    explode_column = table.get(\"explode_column\")\n",
     "\n",
-    "    print(f\"Processing {table_name}...\")\n",
+    "    logger.info(f\"Starting processing for table: {table_name}\")\n",
     "\n",
-    "    df = spark.read \\\n",
-    "        .schema(SCHEMA_MAP[table_name]) \\\n",
-    "        .option(\"multiline\", \"true\") \\\n",
-    "        .json(f\"{BASE_PATH}/*/*/*/*/{file_name}\") \\\n",
-    "        .withColumn(\"file_path\", col(\"_metadata.file_path\")) \\\n",
-    "        .withColumn(\"company_number\",\n",
+    "    df = (\n",
+    "        spark.read\n",
+    "        .schema(SCHEMA_MAP[table_name])\n",
+    "        .option(\"multiline\", \"true\")\n",
+    "        .json(f\"{BASE_PATH}/*/*/*/*/{file_name}\")\n",
+    "        .withColumn(\"file_path\", col(\"_metadata.file_path\"))\n",
+    "        .withColumn(\n",
+    "            \"company_number\",\n",
     "            regexp_extract(\"file_path\", r'/([0-9A-Z]+)/[^/]+$', 1)\n",
     "        )\n",
+    "    )\n",
+    "\n",
+    "    logger.info(f\"Read completed for {table_name}\")\n",
     "\n",
     "    if explode_flag:\n",
-    "        df = df.withColumn(\"exploded\", explode(explode_column)).select(\n",
-    "            \"company_number\", \"exploded.*\"\n",
+    "        logger.info(\n",
+    "            f\"Exploding column '{explode_column}' for table {table_name}\"\n",
+    "        )\n",
+    "        df = (\n",
+    "            df.withColumn(\"exploded\", explode(explode_column))\n",
+    "              .select(\"company_number\", \"exploded.*\")\n",
     "        )\n",
     "\n",
     "    df = df.withColumn(\"last_updated_ts\", current_timestamp())\n",
     "\n",
-    "    df.write \\\n",
-    "        .format(\"delta\") \\\n",
-    "        .mode(\"overwrite\") \\\n",
-    "        .option(\"overwriteSchema\", \"true\") \\\n",
-    "        .saveAsTable(f\"`{CATALOG}`.{SCHEMA}.{table_name}\")\n",
+    "    logger.info(f\"Writing Delta table: {CATALOG}.{SCHEMA}.{table_name}\")\n",
     "\n",
-    "print(\"Metadata-Driven Bronze Pipeline Completed\")\n"
+    "    (\n",
+    "        df.write\n",
+    "        .format(\"delta\")\n",
+    "        .mode(\"overwrite\")\n",
+    "        .option(\"overwriteSchema\", \"true\")\n",
+    "        .saveAsTable(f\"`{CATALOG}`.{SCHEMA}.{table_name}\")\n",
+    "    )\n",
+    "\n",
+    "    logger.info(f\"Completed table: {table_name}\")\n",
+    "\n",
+    "logger.info(\"Metadata-Driven Bronze Pipeline Completed Successfully\")"
    ]
   },
   {
@@ -329,14 +327,14 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "ds2b",
+   "notebookName": "ds2b_company_house",
    "widgets": {
     "config_path": {
-     "currentValue": "/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/databricks/bronze/config.json",
+     "currentValue": "/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/medallion/bronze/config_company_house.json",
      "nuid": "a9d25557-5682-4e79-9e8b-ba20038e6ade",
      "typedWidgetInfo": {
       "autoCreated": false,
-      "defaultValue": "/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/databricks/bronze/config.json",
+      "defaultValue": "/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/databricks/bronze/config_company_house.json",
       "label": "Config File Path",
       "name": "config_path",
       "options": {
@@ -347,12 +345,12 @@
      },
      "widgetInfo": {
       "widgetType": "text",
-      "defaultValue": "/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/databricks/bronze/config.json",
+      "defaultValue": "/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/databricks/bronze/config_company_house.json",
       "label": "Config File Path",
       "name": "config_path",
       "options": {
        "widgetType": "text",
-       "autoCreated": false,
+       "autoCreated": null,
        "validationRegex": null
       }
      }
