b2s with first time scd2

--- a/medallion/silver/b2s_company_house.ipynb
+++ b/medallion/silver/b2s_company_house.ipynb
@@ -182,7 +182,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "b2s",
+   "notebookName": "b2s_company_house",
    "widgets": {
     "config_path": {
      "currentValue": "/Workspace/Users/ud3041@gmail.com/end-to-end-ETL-pipeline/medallion/silver/config.json",
