--- a/medallion/silver/b2s_yfinance.ipynb
+++ b/medallion/silver/b2s_yfinance.ipynb
@@ -27,13 +27,12 @@
     "    label=\"Config File Path\"\n",
     ")\n",
     "\n",
-    "\n",
     "# =========================\n",
     "# IMPORTS\n",
     "# =========================\n",
     "import json\n",
     "from pyspark.sql import functions as F\n",
-    "from pyspark.sql.types import DateType, BooleanType, StringType\n",
+    "from pyspark.sql.types import DateType\n",
     "from delta.tables import DeltaTable\n",
     "\n",
     "from utils.logger import get_logger\n",
@@ -42,8 +41,10 @@
     "# =========================\n",
     "# INIT LOGGER & SPARK\n",
     "# =========================\n",
-    "logger = get_logger(\"b2s_yfinance_scd2_safe\")\n",
-    "spark = create_spark_session(\"B2S | YFinance SCD2 SAFE\")\n",
+    "logger = get_logger(\"b2s_yfinance_scd2\")\n",
+    "spark = create_spark_session(\"B2S | YFinance SCD2\")\n",
+    "\n",
+    "logger.info(\"Spark session initialised\")\n",
     "\n",
     "# =========================\n",
     "# LOAD CONFIG\n",
@@ -70,30 +71,21 @@
     "\n",
     "\n",
     "def ensure_scd_columns(table_name: str):\n",
-    "    \"\"\"\n",
-    "    Add missing SCD columns safely\n",
-    "    \"\"\"\n",
     "    existing_cols = {c.name for c in spark.table(table_name).schema}\n",
     "\n",
-    "    alter_stmts = []\n",
-    "\n",
+    "    alters = []\n",
     "    if \"row_hash\" not in existing_cols:\n",
-    "        alter_stmts.append(\"ADD COLUMN row_hash STRING\")\n",
-    "\n",
+    "        alters.append(\"ADD COLUMN row_hash STRING\")\n",
     "    if \"effective_from\" not in existing_cols:\n",
-    "        alter_stmts.append(\"ADD COLUMN effective_from DATE\")\n",
-    "\n",
+    "        alters.append(\"ADD COLUMN effective_from DATE\")\n",
     "    if \"effective_to\" not in existing_cols:\n",
-    "        alter_stmts.append(\"ADD COLUMN effective_to DATE\")\n",
-    "\n",
+    "        alters.append(\"ADD COLUMN effective_to DATE\")\n",
     "    if \"is_current\" not in existing_cols:\n",
-    "        alter_stmts.append(\"ADD COLUMN is_current BOOLEAN\")\n",
+    "        alters.append(\"ADD COLUMN is_current BOOLEAN\")\n",
     "\n",
-    "    if alter_stmts:\n",
-    "        stmt = f\"ALTER TABLE {table_name} \" + \" \".join(alter_stmts)\n",
-    "        spark.sql(stmt)\n",
+    "    if alters:\n",
+    "        spark.sql(f\"ALTER TABLE {table_name} {' '.join(alters)}\")\n",
     "        logger.info(f\"Added missing SCD columns to {table_name}\")\n",
-    "\n",
     "\n",
     "# =========================\n",
     "# PROCESS TABLES\n",
@@ -107,12 +99,36 @@
     "\n",
     "    logger.info(f\"Processing table: {table_name}\")\n",
     "\n",
-    "    bronze_df = spark.table(f\"`{CATALOG}`.{BRONZE_SCHEMA}.{table_name}\")\n",
+    "    df = spark.table(f\"`{CATALOG}`.{BRONZE_SCHEMA}.{table_name}\")\n",
     "\n",
-    "    # -----------------------------------------\n",
-    "    # HASH\n",
-    "    # -----------------------------------------\n",
-    "    bronze_df = bronze_df.withColumn(\n",
+    "    # =====================================================\n",
+    "    # 1️⃣ STRUCTURAL DATA QUALITY RULES\n",
+    "    # =====================================================\n",
+    "    # Business keys must not be NULL\n",
+    "    for key in business_keys:\n",
+    "        df = df.filter(F.col(key).isNotNull())\n",
+    "\n",
+    "    # =====================================================\n",
+    "    # 2️⃣ BUSINESS VALIDITY RULES (NUMERIC ONLY)\n",
+    "    # =====================================================\n",
+    "    numeric_types = (\"int\", \"bigint\", \"double\", \"float\", \"decimal\")\n",
+    "\n",
+    "    numeric_columns = [\n",
+    "        field.name\n",
+    "        for field in df.schema.fields\n",
+    "        if any(t in field.dataType.simpleString() for t in numeric_types)\n",
+    "    ]\n",
+    "\n",
+    "    for col_name in numeric_columns:\n",
+    "        df = df.filter(\n",
+    "            F.col(col_name).isNull() |\n",
+    "            (F.expr(f\"try_cast({col_name} as double)\") >= 0)\n",
+    "        )\n",
+    "\n",
+    "    # =====================================================\n",
+    "    # 3️⃣ HASH FOR SCD TYPE 2\n",
+    "    # =====================================================\n",
+    "    df = df.withColumn(\n",
     "        hash_column,\n",
     "        F.sha2(\n",
     "            F.concat_ws(\n",
@@ -125,47 +141,42 @@
     "\n",
     "    target_table = f\"`{CATALOG}`.{SILVER_SCHEMA}.{table_name}\"\n",
     "\n",
-    "    # -----------------------------------------\n",
+    "    # =====================================================\n",
     "    # FIRST RUN → CREATE SILVER TABLE\n",
-    "    # -----------------------------------------\n",
+    "    # =====================================================\n",
     "    if not table_exists(target_table):\n",
     "        logger.info(f\"Creating Silver table: {target_table}\")\n",
     "\n",
     "        (\n",
-    "            bronze_df\n",
-    "            .withColumn(\"effective_from\", F.current_date())\n",
-    "            .withColumn(\"effective_to\", F.lit(None).cast(DateType()))\n",
-    "            .withColumn(\"is_current\", F.lit(True))\n",
-    "            .write\n",
-    "            .format(\"delta\")\n",
-    "            .mode(\"overwrite\")\n",
-    "            .saveAsTable(target_table)\n",
+    "            df.withColumn(\"effective_from\", F.current_date())\n",
+    "              .withColumn(\"effective_to\", F.lit(None).cast(DateType()))\n",
+    "              .withColumn(\"is_current\", F.lit(True))\n",
+    "              .write\n",
+    "              .format(\"delta\")\n",
+    "              .mode(\"overwrite\")\n",
+    "              .saveAsTable(target_table)\n",
     "        )\n",
+    "        continue\n",
     "\n",
-    "        continue  # move to next table\n",
-    "\n",
-    "    # -----------------------------------------\n",
-    "    # ENSURE SCD COLUMNS EXIST\n",
-    "    # -----------------------------------------\n",
+    "    # =====================================================\n",
+    "    # ENSURE SCD COLUMNS\n",
+    "    # =====================================================\n",
     "    ensure_scd_columns(target_table)\n",
-    "\n",
     "    delta_table = DeltaTable.forName(spark, target_table)\n",
     "\n",
-    "    # -----------------------------------------\n",
+    "    # =====================================================\n",
     "    # BUILD MERGE CONDITION (COMPOSITE KEYS)\n",
-    "    # -----------------------------------------\n",
-    "    merge_condition = \" AND \".join(\n",
-    "        [f\"t.{k} = s.{k}\" for k in business_keys]\n",
-    "    ) + \" AND t.is_current = true\"\n",
+    "    # =====================================================\n",
+    "    merge_condition = (\n",
+    "        \" AND \".join([f\"t.{k} = s.{k}\" for k in business_keys])\n",
+    "        + \" AND t.is_current = true\"\n",
+    "    )\n",
     "\n",
-    "    # -----------------------------------------\n",
-    "    # 1️⃣ EXPIRE CHANGED ROWS\n",
-    "    # -----------------------------------------\n",
+    "    # =====================================================\n",
+    "    # 4️⃣ EXPIRE CHANGED ROWS\n",
+    "    # =====================================================\n",
     "    delta_table.alias(\"t\") \\\n",
-    "        .merge(\n",
-    "            bronze_df.alias(\"s\"),\n",
-    "            merge_condition\n",
-    "        ) \\\n",
+    "        .merge(df.alias(\"s\"), merge_condition) \\\n",
     "        .whenMatchedUpdate(\n",
     "            condition=f\"t.{hash_column} <> s.{hash_column}\",\n",
     "            set={\n",
@@ -175,22 +186,20 @@
     "        ) \\\n",
     "        .execute()\n",
     "\n",
-    "    # -----------------------------------------\n",
-    "    # 2️⃣ INSERT NEW + CHANGED ROWS\n",
-    "    # -----------------------------------------\n",
+    "    # =====================================================\n",
+    "    # 5️⃣ INSERT NEW / CHANGED ROWS\n",
+    "    # =====================================================\n",
     "    silver_df = spark.table(target_table)\n",
     "\n",
-    "    join_expr = [\n",
-    "        bronze_df[k] == silver_df[k] for k in business_keys\n",
-    "    ] + [silver_df.is_current == True]\n",
+    "    join_expr = (\n",
+    "        [df[k] == silver_df[k] for k in business_keys] +\n",
+    "        [silver_df.is_current == True]\n",
+    "    )\n",
     "\n",
-    "    new_rows_df = (\n",
-    "        bronze_df.alias(\"s\")\n",
-    "        .join(\n",
-    "            silver_df.alias(\"t\"),\n",
-    "            join_expr,\n",
-    "            \"left_anti\"\n",
-    "        )\n",
+    "    new_rows_df = df.alias(\"s\").join(\n",
+    "        silver_df.alias(\"t\"),\n",
+    "        join_expr,\n",
+    "        \"left_anti\"\n",
     "    )\n",
     "\n",
     "    (\n",
@@ -204,9 +213,9 @@
     "        .saveAsTable(target_table)\n",
     "    )\n",
     "\n",
-    "    logger.info(f\"SCD2 completed for {table_name}\")\n",
+    "    logger.info(f\"SCD Type 2 completed for {table_name}\")\n",
     "\n",
-    "logger.info(\"B2S YFinance SCD2 pipeline completed successfully\")"
+    "logger.info(\"B2S YFinance pipeline completed successfully\")"
    ]
   },
   {
